fixed modal z-index issue

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,7 @@ body {
   background: url(https://images.unsplash.com/photo-1523878288860-7ad281611901?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fHdlYnNpdGUlMjBiYWNrZ3JvdW5kJTIwaW1hZ2V8ZW58MHx8MHx8fDI%3D&auto=format&fit=crop&w=800&q=60) no-repeat center center fixed;
   background-size: cover;
   width: 80%;
-  margin: auto;
+  margin: 10%;
   margin-top: 20px;
 }
 
-/* background: url(https://images.unsplash.com/photo-1683695948101-fd31df8697b5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1771&q=80) no-repeat center center fixed; */
