--- a/src/components/ConfirmDelete/confirmDelete.css
+++ b/src/components/ConfirmDelete/confirmDelete.css
@@ -1,4 +1,3 @@
-
 .delete__modal {
     display: flex;
     align-items: center;
@@ -8,6 +7,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
     background-color: rgba(43, 43, 43, 0.6);
   }
 
